// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ServiceOverview -> List renders columns correctly 1`] = `<HealthBadge />`;

exports[`ServiceOverview -> List renders empty state 1`] = `
<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Error rate %",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
    ]
  }
  initialPageSize={50}
  initialSortDirection="desc"
  initialSortField="severity"
  items={Array []}
  sortFn={[Function]}
/>
`;

exports[`ServiceOverview -> List renders with data 1`] = `
<Memo(UnoptimizedManagedTable)
  columns={
    Array [
      Object {
        "field": "serviceName",
        "name": "Name",
        "render": [Function],
        "sortable": true,
        "width": "40%",
      },
      Object {
        "field": "environments",
        "name": "Environment",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "avgResponseTime",
        "name": "Avg. response time",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "transactionsPerMinute",
        "name": "Trans. per minute",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
      Object {
        "align": "left",
        "dataType": "number",
        "field": "errorsPerMinute",
        "name": "Error rate %",
        "render": [Function],
        "sortable": true,
        "width": "160px",
      },
    ]
  }
  initialPageSize={50}
  initialSortDirection="desc"
  initialSortField="severity"
  items={
    Array [
      Object {
        "agentName": "nodejs",
        "avgResponseTime": null,
        "environments": Array [
          "test",
        ],
        "errorsPerMinute": Object {
          "timeseries": Array [],
          "value": 46.06666666666667,
        },
        "serviceName": "opbeans-node",
        "transactionsPerMinute": Object {
          "timeseries": Array [],
          "value": 0,
        },
      },
      Object {
        "agentName": "python",
        "avgResponseTime": Object {
          "timeseries": Array [],
          "value": 91535.42944785276,
        },
        "environments": Array [],
        "errorsPerMinute": Object {
          "timeseries": Array [],
          "value": 12.6,
        },
        "serviceName": "opbeans-python",
        "transactionsPerMinute": Object {
          "timeseries": Array [],
          "value": 86.93333333333334,
        },
      },
    ]
  }
  sortFn={[Function]}
/>
`;
